--- a/src/main.css
+++ b/src/main.css
@@ -2,16 +2,16 @@
   font-family: Noto Sans;
 }
 
+margin-top: 68px;
+.searchDial {
+  margin-top: 68px;
+}
+
 .pageWidth {
   width: 90vw;
 }
 .pageHeight {
   height: 80vh;
-}
-
-margin-top: 68px;
-.searchDial {
-  margin-top: 68px;
 }
 
 .ocean-background {
@@ -50,7 +50,7 @@ md-dialog {
   color: rgba(255,255,255,0.87);
 }
 
-md-button, .profileButtonText {
+button, md-button, .profileButtonText {
   text-transform: none;
   margin-left: 8px;
   margin-right: 8px;
@@ -94,4 +94,5 @@ i {
 
 .listUsage md-divider {
   margin-top: 10px;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
